--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+EditorStartupMap=/Game/Lvl_Korokoro.Lvl_Korokoro
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
